# poc

./: .env.example  pyproject.toml
src/hypermindz/: crew.py  input_file.json  main.py  sensitivity_report.md  test.py
src/hypermindz/config/: agents.yaml  tasks.yaml
src/hypermindz/tools/: custom_tool.py
