[project]
name = "hypermindz"
version = "0.1.0"
description = "hypermindz using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<=3.13"
dependencies = [
    "crewai-tools==0.13.2",
    "crewai[tools]>=0.76.2,<1.0.0",
]

[project.scripts]
hypermindz = "hypermindz.main:run"
run_crew = "hypermindz.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypermindz"]
